--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "google-auth-library": "^10.4.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "^9.11.1",
